force-app/main/default/objects/ARTL_LOC_Task_Approval__c/ARTL_LOC_Task_Approval__c.object-meta.xml
<CustomObject>
    <description>SFDC-303</description>
    <label>ARTL LOC Task Approval</label>
    <nameField>
        <displayFormat>LAPP-{0000}</displayFormat>
        <label>ARTL LOC Task Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ARTL LOC Task Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>