force-app/main/default/objects/ARTL_LOC_Task_Approval__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>SFDC-3616</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>