force-app/main/default/objects/ARTL_LOC_Task_Approval__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <formula>HYPERLINK( TaskId__c , Subject__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task</label>
    <type>Text</type>
</CustomField>