force-app/main/default/objects/ARTL_LOC_Task_Approval__c/fields/TaskId__c.field-meta.xml
<CustomField>
    <fullName>TaskId__c</fullName>
    <label>TaskId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>