force-app/main/default/objects/ARTL_LOC_Task_Approval__c/listViews/PMO_Approver_Group_ARTL_LOC_Task_Approval.listView-meta.xml
<ListView>
    <fullName>PMO_Approver_Group_ARTL_LOC_Task_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>PMO Approver Group</label>
    <queue>PMO_Approver_Group</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>